--- a/AppFavorite/index.html
+++ b/AppFavorite/index.html
@@ -10,7 +10,7 @@
   <header>
     <h1>AppliFavortite</h1>
     <nav>
-      <a href="applications/telegram/index.html">Télégram</a>
+      <a href="applications/telegram/index.html">Telegram</a>
       <a href="applications/snapchat/index.html">Snapchat</a>
       <a href="applications/facebook/index.html">Facebook</a>
     </nav>
