--- a/AppFavorite/index.html
+++ b/AppFavorite/index.html
@@ -23,7 +23,7 @@
     <div class="app-cards">
       <div class="card">
         <a href="applications/telegram/index.html"><img src="images/logo-telegram.png" alt="logo telegram"></a>
-        <a href="applications/telegram/index.html">Télégram</a>
+        <a href="applications/telegram/index.html">Telegram</a>
       </div>
       <div class="card">
         <a href="applications/snapchat/index.html"><img src="images/logo-snapchat.png" alt="logo snapchat"></a>
@@ -40,7 +40,7 @@
   <footer>
     <p>© 2025 AppliFavorite</p>
     <nav>
-      <a href="applications/telegram/index.html">Télégram</a>
+      <a href="applications/telegram/index.html">Telegram</a>
       <a href="applications/snapchat/index.html">Snapchat</a>
       <a href="applications/facebook/index.html">Facebook</a>
     </nav>
