--- a/AppFavorite/index.html
+++ b/AppFavorite/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>AppliFavortite</h1>
+    <h1>AppliFavorite</h1>
     <nav>
       <a href="applications/telegram/index.html">Telegram</a>
       <a href="applications/snapchat/index.html">Snapchat</a>
